# story

./: .gitignore  AGENTS.md  DIRECTOR.md  ORCHESTRATOR.md  PROMPT.md  main.py  pyproject.toml
.opencode/agents/: animated-story-teller.md
.opencode/lib/: memory-store.ts
.opencode/memories/: MEMORY.md  USER.md
.opencode/skills/animate/: SKILL.md
.opencode/skills/save-memory/: SKILL.md
.opencode/tools/: get-memories.ts  kokoro-tts.ts  memory.ts  omnivoice-tts.ts  record-memory.ts  search-soundtracks.ts  show-in-browser.ts
tools/: __init__.py  browser.py  common.py  files.py  memory.py  soundtracks.py  tool_helper.py  tts.py
tools/animator/: ANIMATOR.md  animator.py
tools/browser/: browser.py
tools/director/: DIRECTOR.md
tools/display-short/: browser.py
tools/files/: files.py
tools/memory/: MEMORY.md  memory.py
tools/script-writer/: SCRIPT-WRITER.md
tools/scriptwriter/: scriptwriter.py
tools/soundtracks/: soundtracks.py
tools/storyteller/: STORYTELLER.md  storyteller.py
tools/tts/: tts.py
tools/webfetch/: webfetch.py
